tests/paczka1/small_fuzzy/19105907.err
Error in line 1: Z7FznMj S140 33,1
Error in line 7: tRr7aKH S462 8,8
Error in line 3: I0UblK A470 53,2
